<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_detail"
    android:orientation="vertical"
    tools:context=".ContactDetail">


    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/bg_detail"
        android:orientation="vertical" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_detail"
        app:elevation="0dp">
        <!--    elevation is used for remove line b/w toolbar    -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/arrow_back_24"
            app:titleTextColor="@color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_layout"
        android:background="@drawable/rounded_corner_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="60dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ph_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/email_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/call_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/call"
                    android:padding="16dp"
                    android:src="@drawable/phone_24" />

                <ImageButton
                    android:id="@+id/message_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/message"
                    android:padding="16dp"
                    android:src="@drawable/message_24" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#6C6B6B" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/whatsapp_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/whatsapp_call_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/call"
                    android:padding="16dp"
                    android:src="@drawable/phone_24" />

                <ImageButton
                    android:id="@+id/whatsapp_message_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/message"
                    android:padding="16dp"
                    android:src="@drawable/message_24" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <!--
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignBottom="@id/top_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-50dp"
            android:background="@drawable/circle_border"
            app:cardBackgroundColor="@color/bg"
            app:cardCornerRadius="50dp">

            <TextView
                android:id="@+id/textViewCharacterInDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </androidx.cardview.widget.CardView>
      -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@id/top_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:civ_border_color="@color/white"
        app:civ_border_width="4dp" />

    <ImageButton
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/call"
        android:padding="16dp"
        android:src="@drawable/edit_note_24" />


</RelativeLayout>